src/main/java/com/matthewroyal/marklogic/CreateTableParser/CreateTableParser.java
// Generated from CreateTable.g4 by ANTLR 4.4


package com.matthewroyal.marklogic.CreateTableParser;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CreateTableParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__169=1, T__168=2, T__167=3, T__166=4, T__165=5, T__164=6, T__163=7, 
		T__162=8, T__161=9, T__160=10, T__159=11, T__158=12, T__157=13, T__156=14, 
		T__155=15, T__154=16, T__153=17, T__152=18, T__151=19, T__150=20, T__149=21, 
		T__148=22, T__147=23, T__146=24, T__145=25, T__144=26, T__143=27, T__142=28, 
		T__141=29, T__140=30, T__139=31, T__138=32, T__137=33, T__136=34, T__135=35, 
		T__134=36, T__133=37, T__132=38, T__131=39, T__130=40, T__129=41, T__128=42, 
		T__127=43, T__126=44, T__125=45, T__124=46, T__123=47, T__122=48, T__121=49, 
		T__120=50, T__119=51, T__118=52, T__117=53, T__116=54, T__115=55, T__114=56, 
		T__113=57, T__112=58, T__111=59, T__110=60, T__109=61, T__108=62, T__107=63, 
		T__106=64, T__105=65, T__104=66, T__103=67, T__102=68, T__101=69, T__100=70, 
		T__99=71, T__98=72, T__97=73, T__96=74, T__95=75, T__94=76, T__93=77, 
		T__92=78, T__91=79, T__90=80, T__89=81, T__88=82, T__87=83, T__86=84, 
		T__85=85, T__84=86, T__83=87, T__82=88, T__81=89, T__80=90, T__79=91, 
		T__78=92, T__77=93, T__76=94, T__75=95, T__74=96, T__73=97, T__72=98, 
		T__71=99, T__70=100, T__69=101, T__68=102, T__67=103, T__66=104, T__65=105, 
		T__64=106, T__63=107, T__62=108, T__61=109, T__60=110, T__59=111, T__58=112, 
		T__57=113, T__56=114, T__55=115, T__54=116, T__53=117, T__52=118, T__51=119, 
		T__50=120, T__49=121, T__48=122, T__47=123, T__46=124, T__45=125, T__44=126, 
		T__43=127, T__42=128, T__41=129, T__40=130, T__39=131, T__38=132, T__37=133, 
		T__36=134, T__35=135, T__34=136, T__33=137, T__32=138, T__31=139, T__30=140, 
		T__29=141, T__28=142, T__27=143, T__26=144, T__25=145, T__24=146, T__23=147, 
		T__22=148, T__21=149, T__20=150, T__19=151, T__18=152, T__17=153, T__16=154, 
		T__15=155, T__14=156, T__13=157, T__12=158, T__11=159, T__10=160, T__9=161, 
		T__8=162, T__7=163, T__6=164, T__5=165, T__4=166, T__3=167, T__2=168, 
		T__1=169, T__0=170, INTEGER=171, ID=172, ALPHANUMERIC=173, WS=174, NL=175;
	public static final String[] tokenNames = {
		"<INVALID>", "'INDEX'", "'tinyblob'", "'KEY_BLOCK_SIZE'", "'DELETE'", 
		"'LINEAR'", "'varchar'", "'COMMENT'", "'MEDIUMINT'", "'double'", "'CHECKSUM'", 
		"'IN'", "'float'", "'0'", "'longtext'", "'char'", "'YEAR'", "'PASSWORD'", 
		"'UNSIGNED'", "')'", "'LONGTEXT'", "'CHAR'", "'TABLE'", "'CHARACTER'", 
		"'unsigned'", "'zerofill'", "'BTREE'", "'MIN_ROWS'", "'DESC'", "'AUTO_INCREMENT'", 
		"'INDEX DIRECTORY'", "'smallint'", "'CASCADE'", "'TINYINT'", "'DATETIME'", 
		"'datetime'", "'REFERENCES'", "'table'", "'null'", "'STORAGE'", "'DROP'", 
		"'TABLESPACE'", "'TEXT'", "'binary'", "'1'", "'CHECK'", "'VARBINARY'", 
		"'PARTITION'", "'not null'", "'BY'", "','", "'bigint'", "'int'", "'CHARSET'", 
		"'decimal'", "'TIME'", "'COMPRESSED'", "'FOREIGN'", "'set'", "'MEDIUMBLOB'", 
		"'TINYTEXT'", "'LESS'", "'BIGINT'", "'DATE'", "'FIRST'", "'DEFAULT'", 
		"'FULLTEXT'", "'if exists'", "'BLOB'", "'ZEROFILL'", "'temporary'", "'VARCHAR'", 
		"'NO'", "'USING'", "'BIT'", "'NULL'", "'THAN'", "'SMALLINT'", "'REDUNDANT'", 
		"'CREATE'", "'if not exists'", "'FIXED'", "'ON'", "'DOUBLE'", "'REAL'", 
		"'DISK'", "'time'", "'WITH'", "'MAX_ROWS'", "'/'", "'bit'", "'tinyint'", 
		"'BINARY'", "'ROW_FORMAT'", "'CONSTRAINT'", "'CONNECTION'", "'mediumblob'", 
		"'COMPACT'", "'PRIMARY'", "'TINYBLOB'", "'LONGBLOB'", "'SET'", "'PARTIAL'", 
		"'COLUMNS'", "'TIMESTAMP'", "'NODEGROUP'", "'RANGE'", "'DECIMAL'", "'MAXVALUE'", 
		"'DYNAMIC'", "'INSERT_METHOD'", "'='", "'NOT NULL'", "'drop'", "'FLOAT'", 
		"'timestamp'", "'IF NOT EXISTS'", "'PARSER'", "'INT'", "'varbinary'", 
		"'ENGINE'", "'real'", "'INTEGER'", "'enum'", "'TEMPORARY'", "'DIRECTORY'", 
		"'MATCH'", "'ASC'", "'NUMERIC'", "'('", "'tinytext'", "'COLUMN_FORMAT'", 
		"'PACK_KEYS'", "'ALGORITHM'", "'ACTION'", "'FULL'", "'''", "'2'", "'LIST'", 
		"'COLLATE'", "'numeric'", "'longblob'", "'VALUES'", "'HASH'", "'MEMORY'", 
		"'mediumint'", "'date'", "'SIMPLE'", "'DATA'", "'LAST'", "'UPDATE'", "'ENUM'", 
		"'create'", "'IF EXISTS'", "';'", "'SUBPARTITIONS'", "'KEY'", "'SUBPARTITION'", 
		"'mediumtext'", "'PARTITIONS'", "'MEDIUMTEXT'", "'integer'", "'year'", 
		"'UNIQUE'", "'RESTRICT'", "'text'", "'SPATIAL'", "'DELAY_KEY_WRITE'", 
		"'blob'", "'AVG_ROW_LENGTH'", "'UNION'", "INTEGER", "ID", "ALPHANUMERIC", 
		"WS", "NL"
	};
	public static final int
		RULE_evaluate = 0, RULE_drop_statement = 1, RULE_create_statement = 2, 
		RULE_tbl_name = 3, RULE_create_definition = 4, RULE_column_definition = 5, 
		RULE_data_type = 6, RULE_datatype_simple = 7, RULE_datatype_length = 8, 
		RULE_datatype_ints = 9, RULE_datatype_ints_values = 10, RULE_datatype_reals = 11, 
		RULE_datatype_reals_values = 12, RULE_datatype_reals_values2 = 13, RULE_datatype_chars = 14, 
		RULE_datatype_chars_values = 15, RULE_datatype_texts = 16, RULE_datatype_texts_values = 17, 
		RULE_index_col_name = 18, RULE_index_type = 19, RULE_index_option = 20, 
		RULE_reference_definition = 21, RULE_reference_option = 22, RULE_table_options = 23, 
		RULE_table_option = 24, RULE_password_string = 25, RULE_engine_name = 26, 
		RULE_connect_string = 27, RULE_tablespace_name = 28, RULE_auto_increment_value = 29, 
		RULE_avg_row_length_value = 30, RULE_key_vlock_size_value = 31, RULE_max_rows_value = 32, 
		RULE_min_rows_value = 33, RULE_absolute_path_to_directory = 34, RULE_path = 35, 
		RULE_partition_options = 36, RULE_column_list = 37, RULE_partitions_num = 38, 
		RULE_subpartitions_num = 39, RULE_partition_definition = 40, RULE_value_list = 41, 
		RULE_partition_name = 42, RULE_data_dir = 43, RULE_index_dir = 44, RULE_max_number_of_rows = 45, 
		RULE_min_number_of_rows = 46, RULE_node_group_id = 47, RULE_subpartition_definition = 48, 
		RULE_logical_name = 49, RULE_key_block_size_value = 50, RULE_length = 51, 
		RULE_decimals = 52, RULE_unsigned = 53, RULE_zerofill = 54, RULE_binary = 55, 
		RULE_nullable = 56, RULE_auto_increment = 57, RULE_unique = 58, RULE_primary = 59, 
		RULE_foreign = 60, RULE_column_format = 61, RULE_storage = 62, RULE_expr = 63, 
		RULE_charset_name = 64, RULE_collation_name = 65, RULE_enum_value = 66, 
		RULE_set_value = 67, RULE_spatial_type = 68, RULE_parser_name = 69, RULE_col_name = 70, 
		RULE_symbol = 71, RULE_index_name = 72, RULE_default_value = 73, RULE_comment_string = 74;
	public static final String[] ruleNames = {
		"evaluate", "drop_statement", "create_statement", "tbl_name", "create_definition", 
		"column_definition", "data_type", "datatype_simple", "datatype_length", 
		"datatype_ints", "datatype_ints_values", "datatype_reals", "datatype_reals_values", 
		"datatype_reals_values2", "datatype_chars", "datatype_chars_values", "datatype_texts", 
		"datatype_texts_values", "index_col_name", "index_type", "index_option", 
		"reference_definition", "reference_option", "table_options", "table_option", 
		"password_string", "engine_name", "connect_string", "tablespace_name", 
		"auto_increment_value", "avg_row_length_value", "key_vlock_size_value", 
		"max_rows_value", "min_rows_value", "absolute_path_to_directory", "path", 
		"partition_options", "column_list", "partitions_num", "subpartitions_num", 
		"partition_definition", "value_list", "partition_name", "data_dir", "index_dir", 
		"max_number_of_rows", "min_number_of_rows", "node_group_id", "subpartition_definition", 
		"logical_name", "key_block_size_value", "length", "decimals", "unsigned", 
		"zerofill", "binary", "nullable", "auto_increment", "unique", "primary", 
		"foreign", "column_format", "storage", "expr", "charset_name", "collation_name", 
		"enum_value", "set_value", "spatial_type", "parser_name", "col_name", 
		"symbol", "index_name", "default_value", "comment_string"
	};

	@Override
	public String getGrammarFileName() { return "CreateTable.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	  // Old String default
	  private StringBuilder myString = new StringBuilder("tables: ");

	  private void addString(String s){
	    if(s!=null && s.length() > 0){
	        myString.append(s);
	     }
	  }



	public CreateTableParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvaluateContext extends ParserRuleContext {
		public String result;
		public Drop_statementContext drop_statement(int i) {
			return getRuleContext(Drop_statementContext.class,i);
		}
		public List<Drop_statementContext> drop_statement() {
			return getRuleContexts(Drop_statementContext.class);
		}
		public List<Create_statementContext> create_statement() {
			return getRuleContexts(Create_statementContext.class);
		}
		public Create_statementContext create_statement(int i) {
			return getRuleContext(Create_statementContext.class,i);
		}
		public EvaluateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_evaluate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterEvaluate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitEvaluate(this);
		}
	}

	public final EvaluateContext evaluate() throws RecognitionException {
		EvaluateContext _localctx = new EvaluateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_evaluate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				switch (_input.LA(1)) {
				case T__130:
				case T__57:
					{
					setState(150); drop_statement();
					}
					break;
				case T__91:
				case T__18:
					{
					setState(151); create_statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(154); match(T__16);
				}
				}
				setState(158); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__130 || _la==T__91 || _la==T__57 || _la==T__18 );
			 ((EvaluateContext)_localctx).result =  myString.toString(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Drop_statementContext extends ParserRuleContext {
		public Tbl_nameContext tbl_name() {
			return getRuleContext(Tbl_nameContext.class,0);
		}
		public Drop_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterDrop_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitDrop_statement(this);
		}
	}

	public final Drop_statementContext drop_statement() throws RecognitionException {
		Drop_statementContext _localctx = new Drop_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_drop_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !(_la==T__130 || _la==T__57) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(163);
			_la = _input.LA(1);
			if ( !(_la==T__148 || _la==T__133) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(165);
			_la = _input.LA(1);
			if (_la==T__103 || _la==T__17) {
				{
				setState(164);
				_la = _input.LA(1);
				if ( !(_la==T__103 || _la==T__17) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(167); tbl_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_statementContext extends ParserRuleContext {
		public Tbl_nameContext tbl_name() {
			return getRuleContext(Tbl_nameContext.class,0);
		}
		public Create_definitionContext create_definition(int i) {
			return getRuleContext(Create_definitionContext.class,i);
		}
		public Partition_optionsContext partition_options() {
			return getRuleContext(Partition_optionsContext.class,0);
		}
		public Table_optionsContext table_options() {
			return getRuleContext(Table_optionsContext.class,0);
		}
		public List<Create_definitionContext> create_definition() {
			return getRuleContexts(Create_definitionContext.class);
		}
		public Create_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterCreate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitCreate_statement(this);
		}
	}

	public final Create_statementContext create_statement() throws RecognitionException {
		Create_statementContext _localctx = new Create_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_la = _input.LA(1);
			if ( !(_la==T__91 || _la==T__18) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(171);
			_la = _input.LA(1);
			if (_la==T__100 || _la==T__46) {
				{
				setState(170);
				_la = _input.LA(1);
				if ( !(_la==T__100 || _la==T__46) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(173);
			_la = _input.LA(1);
			if ( !(_la==T__148 || _la==T__133) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(175);
			_la = _input.LA(1);
			if (_la==T__90 || _la==T__54) {
				{
				setState(174);
				_la = _input.LA(1);
				if ( !(_la==T__90 || _la==T__54) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(177); tbl_name();
			setState(179);
			_la = _input.LA(1);
			if (_la==T__41) {
				{
				setState(178); match(T__41);
				}
			}

			setState(181); create_definition();
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__120) {
				{
				{
				setState(182); match(T__120);
				setState(183); create_definition();
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			_la = _input.LA(1);
			if (_la==T__151) {
				{
				setState(189); match(T__151);
				}
			}

			setState(193);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__167) | (1L << T__163) | (1L << T__160) | (1L << T__153) | (1L << T__147) | (1L << T__143) | (1L << T__141) | (1L << T__140) | (1L << T__129) | (1L << T__117))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (T__105 - 65)) | (1L << (T__82 - 65)) | (1L << (T__77 - 65)) | (1L << (T__75 - 65)) | (1L << (T__60 - 65)) | (1L << (T__50 - 65)))) != 0) || ((((_la - 132)) & ~0x3f) == 0 && ((1L << (_la - 132)) & ((1L << (T__38 - 132)) | (1L << (T__31 - 132)) | (1L << (T__22 - 132)) | (1L << (T__3 - 132)) | (1L << (T__1 - 132)) | (1L << (T__0 - 132)))) != 0)) {
				{
				setState(192); table_options();
				}
			}

			setState(196);
			_la = _input.LA(1);
			if (_la==T__123) {
				{
				setState(195); partition_options();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tbl_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CreateTableParser.ID, 0); }
		public Tbl_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tbl_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).enterTbl_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CreateTableListener ) ((CreateTableListener)listener).exitTbl_name(this);
		}
	}

	public final Tbl_nameContext tbl_name() throws RecognitionException {
		Tbl_nameContext _localctx = new Tbl_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tbl_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
